syntax = "proto3";

package tstr.common.v1;

import "google/protobuf/timestamp.proto";

option go_package =  "github.com/nanzhong/tstr/api/common/v1;common";

message Label {
  string name = 1;
  string value = 2;
}

message Test {
  message RunConfig {
    uint32 version = 1; // required (generated)
    string container_image = 2; // required
    string command = 3;
    map<string, string> env = 4;
  }

  string id = 1; // required (generated)
  string name = 2; // required
  repeated Label labels = 3;
  string cron_schedule = 4;
  RunConfig run_config = 5; // required
  repeated RunConfig former_run_configs = 6;

  google.protobuf.Timestamp registered_at = 10; // required
  google.protobuf.Timestamp updated_at = 11; // required
  google.protobuf.Timestamp archived_at = 12;
}

message TestSuite {
  string id = 1; // required (generated)
  string name = 2;
  repeated Label labels = 3;

  google.protobuf.Timestamp created_at = 10; // required
  google.protobuf.Timestamp updated_at = 11; // required
  google.protobuf.Timestamp archived_at = 12;
}

message Run {
  enum Result {
    UNKNOWN = 0;
    PASS = 1;
    FAIL = 2;
    ERROR = 3;
  }

  message Log {
    enum Output {
      UNKNOWN = 0;
      STDOUT = 1;
      STDERR = 2;
    }

    string time = 1; // required
    Output output_type = 2; // required
    bytes data = 3; // required
  }

  string id = 1;  // required (generated)
  string test_id = 2; // required
  Test.RunConfig test_run_config = 3; // required
  string runner_id = 4;
  Result result = 5;
  repeated Log logs = 6;

  google.protobuf.Timestamp scheduled_at = 10;
  google.protobuf.Timestamp started_at = 11;
  google.protobuf.Timestamp finished_at = 12;
}

message Runner {
  string id = 1; // required (generated)
  string name = 2; // required
  repeated Label accept_test_labels = 3;
  repeated Label reqect_test_labels = 4;

  google.protobuf.Timestamp registered_at = 10;
  google.protobuf.Timestamp approved_at = 11;
  google.protobuf.Timestamp last_heartbeat_at = 12;
}

message AccessToken {
  enum Scope {
    UNKNOWN = 0;
    CONTROL_R = 1;
    CONTROL_RW = 2;
    ADMIN = 3;
  }

  string id = 1; // required (generated)
  string name = 2; // required
  string token = 3; // required (generated) will be present only on issuance, empty otherwise
  repeated Scope scopes = 4; // required

  google.protobuf.Timestamp issued_at = 10; // required
  google.protobuf.Timestamp expires_at = 11;
  google.protobuf.Timestamp revoked_at = 12;
}
