syntax = "proto3";

package tstr.identity.v1;

import "common/v1/common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "validate/validate.proto";

service IdentityService {
  rpc Identity(IdentityRequest) returns (IdentityResponse) {
    option (google.api.http) = {
      get: "/identity/v1/identity"
    };
  };
}

message IdentityRequest {}

message IdentityResponse {
  tstr.common.v1.AccessToken access_token = 1;
  repeated string accessible_namespaces = 2;
}
